# django-mongodb-extensions

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/scripts/: bump-version.sh
.github/workflows/: dist-python.yml  release-python.yml  test-python.yml  zizmor.yml
django_mongodb_extensions/debug_toolbar/panels/: __init__.py
django_mongodb_extensions/debug_toolbar/panels/mql/: forms.py  panel.py  tracking.py  utils.py  views.py
django_mongodb_extensions/mql_panel/: __init__.py  forms.py  panel.py  utils.py  views.py
django_mongodb_extensions/templates/debug_toolbar/panels/: mql.html  mql_explain.html  mql_select.html
django_mongodb_extensions/templates/mql_panel/: mql.html  mql_explain.html  mql_query.html  subtype_value.html
django_mongodb_extensions/tests/panels/: test_mql.py
tests/: __init__.py  conftest.py  settings.py  test_forms.py  test_mql_forms.py  test_mql_panel.py  test_mql_utils.py  test_mql_views.py  test_panel.py  test_utils.py  urls.py
tests/debug_toolbar/: test_forms.py  test_panel.py  test_utils.py
tests/mql_panel/: test_forms.py  test_panel.py  test_utils.py  test_views.py
