[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-mongodb-extensions"
version = "0.1.0.a2"
description = "Django MongoDB Extensions"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "django-debug-toolbar",
]

[tool.hatch.build.targets.wheel]
packages = ["django_mongodb_extensions"]

[tool.hatch.build.targets.sdist]
include = [
    "django_mongodb_extensions/**",
]
