[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-mongodb-extensions"
version = "0.2.0"
description = "Extensions for Django MongoDB Backend"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "coverage",
    "django-debug-toolbar",
]

[tool.ruff.lint]
select = ["I", "F"]
